<?xml version="1.0"?>
<package format="2">
  <name>tf_dag</name>
  <version>0.0.1</version>
  <description>Treat the tf tree like a dag</description>

  <maintainer email="thomas@ascent.ai">Tom Stewart</maintainer>

  <license></license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf2_ros</depend>
  <depend>roscpp</depend>

</package>
